--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,50 @@
     <meta charset="utf-8" />
 
     <link rel="icon" href="%PUBLIC_URL%/brain64.png" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <meta name="theme-color" content="#000000" />
-
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/brain256.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+
     <title>Brain Games Es</title>
+    <meta name="title" content="Brain Games Es – ArenasAgustin" />
+    <meta
+      name="description"
+      content="Les presento un proyecto que llamo Brain Games Es, es un juego que consta (por el momento) de 10 niveles para descifrar una palabra encriptada, puntaje y pistas."
+    />
+
+    <!--  Open Graph / Facebook  -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://arenasagustin.github.io/brain-games/"
+    />
+    <meta property="og:title" content="Brain Games Es – ArenasAgustin" />
+    <meta
+      property="og:description"
+      content="Les presento un proyecto que llamo Brain Games Es, es un juego que consta (por el momento) de 10 niveles para descifrar una palabra encriptada, puntaje y pistas."
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/df7zuvuxu/image/upload/v1644522692/Brain_Games_Es_fixlbo.png"
+    />
+
+    <!--  Twitter  -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://arenasagustin.github.io/brain-games/"
+    />
+    <meta property="twitter:title" content="Brain Games Es – ArenasAgustin" />
+    <meta
+      property="twitter:description"
+      content="Les presento un proyecto que llamo Brain Games Es, es un juego que consta (por el momento) de 10 niveles para descifrar una palabra encriptada, puntaje y pistas."
+    />
+    <meta
+      property="twitter:image"
+      content="https://res.cloudinary.com/df7zuvuxu/image/upload/v1644522692/Brain_Games_Es_fixlbo.png"
+    />
   </head>
   <body>
     <div id="root"></div>
